--- a/Index.html
+++ b/Index.html
@@ -73,6 +73,10 @@
                     <p class="code">105200</p>
                     <p class="code" >ფასი - 1.7ლ</p>
                 </div>
+                 <div class="Cards" name="105200-190200">
+                    <img src="./images/105200-190200---(1.7-1.7)---(48C-48C).JPG" alt="07S50" >
+                    <p class="code">VSSBff</p>
+                </div>
             </div>
         </div>
     </div>
